@@ -1,5 +1,16 @@
 $Id$
 
+            [- Version 2.1.5 -]
+2005-12-30: When installing YTools, if YTFM is not yet installed, user
+            is queried whether it should be installed, but is no
+            longer asked the confusing question about whether YTFM
+            should be loaded; the load now happens willy-nilly.
+            Post-file-transduction hooks are now run in reverse chrono
+            order. 
+            Replaced occurrences of (set sym val) with (!=
+            (Symbol-value sym) val) in tracearound to make CLISP
+            happy. 
+
             [- Version 2.1.4 -]
 2005-12-28: Allow '_' in (repeat :for ((_ = l :to h)) ...).
 
